--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -92,7 +92,8 @@
     
 
     <section class="footer">
-        <p>The Desktop Project</p>
+        <p>The Desktop Project
+           </p>
     </section>
 </body>
 </html>
